--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=0ff3cf96e547"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -36,6 +37,7 @@
     "@web/test-runner": "^0.13.3",
     "babel-loader": "^8.2.3",
     "chai": "^4.3.4",
+    "chromatic": "^6.5.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
