--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
+  "name": "react-image-filters",
+  "description": "React filters Library",
+  "author": "sarf_alam",
+  "keywords": [
+    "react",
+    "components",
+    "ui"
+  ],
+  "version": "0.4.0",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sarfraz-droid/react-filter.git"
+  },
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "web-test-runner \"src/**/*.test.tsx\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -9,10 +29,11 @@
     "build-storybook": "build-storybook",
     "chromatic": "chromatic --exit-zero-on-changes",
     "predeploy": "npm run build-storybook",
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "deploy-storybook": "gh-pages -d build"
   },
   "homepage": "https://github.com/Sarfraz-droid/react-filter",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
