--- a/package.json
+++ b/package.json
@@ -1,4 +1,24 @@
 {
+    "name": "react-image-filters",
+    "description": "React filters Library",
+    "author": "sarf_alam",
+    "keywords": [
+      "react",
+      "components",
+      "ui"
+    ],
+    "version": "0.4.0",
+    "private": false,
+    "main": "dist/index.js",
+    "module": "dist/index.js",
+    "files": [
+      "dist",
+      "README.md"
+    ],
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Sarfraz-droid/react-filter.git"
+    },
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
