--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=0ff3cf96e547"
+    "chromatic": "npx chromatic --project-token=0ff3cf96e547",
+    "tsc-build": "npx tsc src/lib/*.tsx --outDir dist --jsx react --esModuleInterop true"
   },
   "dependencies": {
     "react": "^17.0.2",
